neue Programmuebersicht, Programmfilter

--- a/client/assets/scss/custom/components.scss
+++ b/client/assets/scss/custom/components.scss
@@ -68,3 +68,8 @@ ul {
 .hr-success{
   border-top: 1px solid #a9a8a8;
 }
+
+.h3-table{
+  padding: 5px;
+  background-image: linear-gradient(135deg, #ff5900, #ffd626);
+}
