--- a/client/assets/scss/custom/components.scss
+++ b/client/assets/scss/custom/components.scss
@@ -71,5 +71,5 @@ ul {
 
 .h3-table{
   padding: 5px;
-  background-image: linear-gradient(135deg, #ff5900, #ffd626);
+  background-image: linear-gradient(135deg, #302685, #3d31aa);
 }
