Helper weiter, anderer Stuff

--- a/client/assets/scss/custom/components.scss
+++ b/client/assets/scss/custom/components.scss
@@ -73,3 +73,7 @@ ul {
   padding: 5px;
   background-image: linear-gradient(135deg, #302685, #3d31aa);
 }
+
+.table-program{
+  table-layout:fixed;
+}
